# AxumServiceScaffold

./: .env-public  .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  container.rs  create_app.rs  db.rs  docs.rs  error.rs  lib.rs  logging.rs  main.rs  response.rs  state.rs
src/api/: mod.rs
src/api/controllers/: auth_controller.rs  example_controller.rs  mod.rs  system_controller.rs
src/api/dto/: auth.rs  example.rs  system.rs
src/api/extractors/: current_user.rs
src/auth/: dto.rs  extractor.rs  handlers.rs  jwt.rs  mod.rs  service.rs
src/domain/: constants.rs  error.rs
src/domain/models/: auth.rs  example.rs  system.rs
src/domain/repositories/: mod.rs
src/domain/services/: auth.rs  example.rs  system.rs
src/entities/: mod.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/databases/: mod.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/services/: jwt.rs
src/modules/: mod.rs
src/modules/example/: dto.rs  handlers.rs  mod.rs  service.rs
src/modules/system/: dto.rs  handlers.rs  mod.rs  service.rs
src/services/: auth.rs  example.rs  mod.rs  system.rs
src/util/: password.rs
