[package]
name = "axum-service-scaffold"
version = "0.1.0"
edition = "2024"
authors = ["Guardian team"]
license = "MIT"
description = "一个面向 Axum Web 服务的 Rust 空白脚手架，内置配置、日志、SeaORM、JWT、Swagger 与统一错误处理。"
repository = "https://github.com/cherry-llt/Guardian"
keywords = ["axum", "swagger", "seaorm", "jwt", "scaffold"]
categories = ["web-programming", "development-tools"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
jsonwebtoken = "9"
mime = "0.3"
mimalloc = "0.1"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
