[package]
name = "axum-service-scaffold"
version = "0.2.0"
edition = "2024"
authors = ["Guardian team"]
license = "MIT"
description = "用于快速搭建 Axum + SeaORM 洋葱架构服务的 Rust 脚手架"
repository = "https://github.com/cherry-llt/Guardian"
keywords = ["axum", "swagger", "seaorm", "jwt", "scaffold"]
categories = ["web-programming", "development-tools"]

[dependencies]
# 错误处理与抽象
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"

# Web 框架与 HTTP 中间件
axum = "0.8"
mime = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 异步运行时与性能
tokio = { version = "1", features = ["full"] }
mimalloc = "0.1"
rayon = "1.10"

# 配置、时间与基础工具
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
once_cell = "1.21"
rand = "0.8"
regex = "1.12"

# 数据序列化与参数校验
base64 = "0.22"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }

# 鉴权与密码学
argon2 = "0.5"
jsonwebtoken = "9"

# 可观测性
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# OpenAPI 与调试文档
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

# 常用外部调用与标识工具
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
